[gd_scene load_steps=21 format=3 uid="uid://dssecwmc05qlq"]

[ext_resource type="Script" path="res://Main.gd" id="1_5mcwj"]
[ext_resource type="Shader" path="res://Terrain.gdshader" id="2_qqamv"]
[ext_resource type="PackedScene" uid="uid://be3msxv4st7e1" path="res://FirstPersonFlyer/FirstPersonFlyer.tscn" id="3_82cgc"]
[ext_resource type="PackedScene" uid="uid://lu5qhovxhghx" path="res://Tractor.tscn" id="4_tsqja"]
[ext_resource type="Texture2D" uid="uid://f3chvlcfcce1" path="res://GreenCheckerboard.png" id="5_7utf1"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jlbij"]
seed = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dnqro"]
width = 100
height = 100
generate_mipmaps = false
noise = SubResource("FastNoiseLite_jlbij")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_00ssp"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vtqow"]
seamless = true
noise = SubResource("FastNoiseLite_00ssp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_77m2g"]
render_priority = 0
shader = ExtResource("2_qqamv")
shader_parameter/heightMultiplier = 62.445
shader_parameter/insideFieldAlbedo = Color(0, 1, 0.121569, 1)
shader_parameter/outsideFieldAlbedo = Color(1, 1, 1, 1)
shader_parameter/textureScale = Vector2(10, 10)
shader_parameter/fieldRadius = 0.1
shader_parameter/gridDist = 0.01
shader_parameter/gridWidth = 0.02
shader_parameter/heightmap = SubResource("NoiseTexture2D_dnqro")
shader_parameter/terrainTexture = SubResource("NoiseTexture2D_vtqow")

[sub_resource type="PlaneMesh" id="PlaneMesh_hg4uv"]
size = Vector2(1000, 1000)
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gycji"]
albedo_texture = ExtResource("5_7utf1")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_qhte3"]
size = Vector3(10, 1, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wwbtj"]
points = PackedVector3Array(-5, -0.5, -5, -5, 0.5, -5, 5, -0.5, -5, -5, -0.5, 5, -5, 0.5, 5, 5, 0.5, -5, 5, -0.5, 5, 5, 0.5, 5)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_v3qjp"]

[sub_resource type="Sky" id="Sky_wky0i"]
sky_material = SubResource("ProceduralSkyMaterial_v3qjp")

[sub_resource type="Environment" id="Environment_27gc0"]
background_mode = 2
sky = SubResource("Sky_wky0i")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mqdkg"]
albedo_texture = ExtResource("5_7utf1")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_nryma"]
size = Vector3(20, 20, 20)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w5fvs"]
points = PackedVector3Array(10, 10, 10, 10, 10, -10, -10, 10, 10, 10, -10, 10, 10, -10, -10, -10, 10, -10, -10, -10, 10, -10, -10, -10)

[node name="Main" type="Node3D"]
script = ExtResource("1_5mcwj")

[node name="Panel_Controls" type="Panel" parent="."]
offset_right = 402.0
offset_bottom = 177.0

[node name="HSlider_SteerAngle" type="HSlider" parent="Panel_Controls"]
layout_mode = 0
offset_left = 130.0
offset_right = 330.0
offset_bottom = 26.0
min_value = -45.0
max_value = 45.0
tick_count = 5
ticks_on_borders = true

[node name="Label_SteerAngle" type="Label" parent="Panel_Controls"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 26.0
text = "Steer angle:"
horizontal_alignment = 2

[node name="Label_TargetSpeed" type="Label" parent="Panel_Controls"]
layout_mode = 0
offset_top = 32.0
offset_right = 120.0
offset_bottom = 58.0
text = "Target speed:"
horizontal_alignment = 2

[node name="HSlider_TargetSpeed" type="HSlider" parent="Panel_Controls"]
layout_mode = 0
offset_left = 130.0
offset_top = 32.0
offset_right = 330.0
offset_bottom = 58.0
min_value = -30.0
max_value = 30.0
tick_count = 5
ticks_on_borders = true

[node name="Label_SteerAngle_Value" type="Label" parent="Panel_Controls"]
layout_mode = 0
offset_left = 350.0
offset_right = 390.0
offset_bottom = 26.0
text = "0"

[node name="Label_TargetSpeed_Value" type="Label" parent="Panel_Controls"]
layout_mode = 0
offset_left = 350.0
offset_top = 32.0
offset_right = 390.0
offset_bottom = 58.0
text = "0"

[node name="Button_ResetSteerAngleAndSpeed" type="Button" parent="Panel_Controls"]
layout_mode = 0
offset_top = 64.0
offset_right = 51.0
offset_bottom = 95.0
text = "Reset manual angle and speed"

[node name="CheckBox_AutomaticSteering" type="CheckBox" parent="Panel_Controls"]
layout_mode = 0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 127.0
disabled = true
text = "Automatic steering"

[node name="CheckBox_DebugMessage_Receive" type="CheckBox" parent="Panel_Controls"]
layout_mode = 0
offset_top = 122.0
offset_right = 270.0
offset_bottom = 153.0
text = "Debug message prints (receive)"

[node name="CheckBox_DebugMessage_Send" type="CheckBox" parent="Panel_Controls"]
layout_mode = 0
offset_top = 147.0
offset_right = 251.0
offset_bottom = 178.0
text = "Debug message prints (send)"

[node name="Terrain" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_77m2g")
mesh = SubResource("PlaneMesh_hg4uv")

[node name="StaticBody3D" type="StaticBody3D" parent="Terrain"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Terrain/StaticBody3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.862576, 0.505928, 0, -0.505928, 0.862576, 0, 173.442, 162.833)

[node name="FirstPersonFlyer" parent="." instance=ExtResource("3_82cgc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42, 10)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -7.35672e-08, -0.841511, 0.54024, 4.72293e-08, 0.54024, 0.841511, 0, 120.613, 0.0153999)
shadow_enabled = true

[node name="Tractor" parent="." instance=ExtResource("4_tsqja")]
transform = Transform3D(-0.998836, 0, 0.0482397, 0, 1, 0, -0.0482397, 0, -0.998836, 0, 19.5076, 0)

[node name="Camera_Follow" type="Camera3D" parent="Tractor"]
transform = Transform3D(-1, 3.96891e-08, -7.78943e-08, 0, 0.891006, 0.45399, 8.74228e-08, 0.45399, -0.891006, 0, 8.15, -6.021)
current = true

[node name="Camera_Driver" type="Camera3D" parent="Tractor"]
transform = Transform3D(-1, 4.28408e-08, -9.68575e-08, 0, 0.906308, 0.422618, 1.04308e-07, 0.422618, -0.906308, 0, 1.229, 1.107)

[node name="Camera_Angled" type="Camera3D" parent="Tractor"]
transform = Transform3D(-0.71325, 0.13374, -0.688031, 0, 0.981627, 0.190809, 0.700909, 0.136095, -0.700146, -9.55713, 4.76142, -5.78461)

[node name="Camera_Angled_2" type="Camera3D" parent="Tractor"]
transform = Transform3D(-0.803857, -0.0456342, 0.59307, 0, 0.997053, 0.076719, -0.594823, 0.0616711, -0.801488, 8.787, 6.321, -10.04)

[node name="StaticBox" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.322, 0)
material_override = SubResource("StandardMaterial3D_gycji")
mesh = SubResource("BoxMesh_qhte3")

[node name="StaticBody3D" type="StaticBody3D" parent="StaticBox"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBox/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_wwbtj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_27gc0")

[node name="Panel_LocationOrientation" type="Panel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -186.0
offset_right = 232.0
grow_vertical = 0

[node name="Label_Latitude" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 26.0
text = "Latitude:"
horizontal_alignment = 2

[node name="Label_Latitude_Value" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_left = 110.0
offset_right = 210.0
offset_bottom = 23.0

[node name="Label_Longitude" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_top = 32.0
offset_right = 100.0
offset_bottom = 58.0
text = "Longitude:"
horizontal_alignment = 2

[node name="Label_Longitude_Value" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_left = 110.0
offset_top = 32.0
offset_right = 210.0
offset_bottom = 55.0

[node name="Label_Altitude" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_top = 64.0
offset_right = 100.0
offset_bottom = 90.0
text = "Altitude:"
horizontal_alignment = 2

[node name="Label_Altitude_Value" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_left = 110.0
offset_top = 64.0
offset_right = 210.0
offset_bottom = 87.0

[node name="Label_Heading" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_top = 96.0
offset_right = 100.0
offset_bottom = 122.0
text = "Heading:"
horizontal_alignment = 2

[node name="Label_Heading_Value" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_left = 110.0
offset_top = 96.0
offset_right = 210.0
offset_bottom = 119.0

[node name="Label_Roll" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_top = 128.0
offset_right = 100.0
offset_bottom = 154.0
text = "Roll:"
horizontal_alignment = 2

[node name="Label_Roll_Value" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_left = 110.0
offset_top = 128.0
offset_right = 210.0
offset_bottom = 151.0

[node name="Label_Speed" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_top = 156.0
offset_right = 100.0
offset_bottom = 182.0
text = "Speed:"
horizontal_alignment = 2

[node name="Label_Speed_Value" type="Label" parent="Panel_LocationOrientation"]
layout_mode = 0
offset_left = 110.0
offset_top = 156.0
offset_right = 210.0
offset_bottom = 179.0

[node name="Ramp" type="MeshInstance3D" parent="."]
transform = Transform3D(0.790823, -0.605763, 0.0874599, 0.239318, 0.174529, -0.955127, 0.563316, 0.776267, 0.282992, 0, 7.88973, 24.7912)
material_override = SubResource("StandardMaterial3D_mqdkg")
mesh = SubResource("BoxMesh_nryma")

[node name="StaticBody3D" type="StaticBody3D" parent="Ramp"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ramp/StaticBody3D"]
transform = Transform3D(1, 1.49012e-08, 0, -2.98023e-08, 1, 5.96046e-08, 0, 2.98023e-08, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_w5fvs")

[connection signal="value_changed" from="Panel_Controls/HSlider_SteerAngle" to="." method="_on_h_slider_steer_angle_value_changed"]
[connection signal="value_changed" from="Panel_Controls/HSlider_TargetSpeed" to="." method="_on_h_slider_target_speed_value_changed"]
[connection signal="pressed" from="Panel_Controls/Button_ResetSteerAngleAndSpeed" to="." method="_on_button_reset_steer_angle_and_speed_pressed"]
